--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to NGINX</h1>
-    <img src="image.png" alt="Custom Image">
+    <img src="image.jpg" alt="Custom Image">
 </body>
 </html>
