--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NGINX Web Server</title>
+    <title>DEMO APP Server</title>
 </head>
 <body>
-    <h1>Welcome to NGINX</h1>
+    <h1>WELCIME TO CI-CD DEMO</h1>
     <img src="image.jpg" alt="Custom Image">
 </body>
 </html>
