--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DEMO APP Server</title>
+    <title>CI_CD DEMO APP Server</title>
 </head>
 <body>
     <h1>WELCIME TO CI-CD DEMO</h1>
