--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>WELCIME TO COMPREHENSIVE CI-CD DEMO</h1>
-    <img src="lion_image.jpg" alt="Custom Image">
+    <img src="tiger_image.jpg" alt="Custom Image">
 </body>
 </html>
