--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMPREHENSIVE CI_CD DEMO APP Server</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+        h1 {
+            margin-bottom: 20px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+        }
+    </style>
 </head>
 <body>
-    <h1>WELCIME TO COMPREHENSIVE CI-CD DEMO</h1>
+    <h1>WELCOME TO COMPREHENSIVE CI-CD DEMO</h1>
     <img src="Dev2.jpg" alt="Custom Image">
 </body>
 </html>
