--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
+            text-align: center;
         }
         h1 {
             margin-bottom: 20px;
+            font-size: 2rem;
         }
         img {
             max-width: 100%;
             height: auto;
-            display: block;
         }
     </style>
 </head>
