--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         }
         img {
             max-width: 50%;
+            max-height: 60vh; /* Ensure the image does not exceed 60% of the viewport height */
             height: auto;
+            margin-top: 20px; /* Add some space between the header and the image */
         }
     </style>
 </head>
