--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COMPREHENSIVE CI_CD DEMO APP Server</title>
+    <title>COMPREHENSIVE CI/CD DEMO APP Server</title>
     <style>
         body {
             display: flex;
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <h1>WELCOME TO COMPREHENSIVE CI-CD DEMO</h1>
+    <h1>WELCOME TO COMPREHENSIVE CI/CD DEMO</h1>
     <img src="Dev3.jpg" alt="Custom Image">
 </body>
 </html>
