--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <h1>WELCOME TO COMPREHENSIVE CI/CD DEMO</h1>
+    <h1>***WELCOME TO COMPREHENSIVE CI/CD DEMO***</h1>
     <img src="Dev2.jpg" alt="Custom Image">
 </body>
 </html>
